[workspace]
resolver = "3"
members = ["lib/*", "pgr-downloader"]
default-members = ["pgr-downloader"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.0"
authors = ["Alvin Null <supdrewin@outlook.com>"]
repository = "https://github.com/supdrewin/pgr-toolkit/"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
futures-util = "0.3"
indicatif = "0.17"
md-5 = "0.10"
pgr-dl = { path = "lib/pgr-dl" }
pgr-md = { path = "lib/pgr-md" }
reqwest = { version = "0.12", features = ["gzip", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
incremental = true
