[package]
name = "pgr-downloader"
description = "PGR Downloader written in Rust"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
console.workspace = true
indicatif.workspace = true
pgr-dl.workspace = true
pgr-md.workspace = true
reqwest.workspace = true
tokio.workspace = true
